test/compilable/imports/g313templatemixin.d
module imports.g313templatemixin;
void bug()
{
}
