test/fail_compilation/test1441a.d
module test1441a;

import imports.test1441a;

void foo()
{
    auto obj = new Foo();
}
